clusters/home/docs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docs
  namespace: docs
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Docs"
    gethomepage.dev/description: "The home-lab documentation site"
    gethomepage.dev/group: "Cluster"
    gethomepage.dev/icon: "docusaurus.png"
    gethomepage.dev/href: "https://docs.lan/"
    gethomepage.dev/pod-selector: "app=docs"
spec:
  ingressClassName: traefik
  tls:
    - hosts: ["docs.lan"]
      secretName: docs-tls
  rules:
    - host: docs.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docs
                port:
                  number: 80
